<resources>
    <string name="app_name">Classroom</string>
    <string name="sign_in">Sign In</string>
    <string name="new_class">New Class</string>
    <string name="list_of_classes">List of Teaching Classes</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="change_role">Change Role Screen</string>
    <string name="log_out">Log out</string>
    <string name="set_as_default_role">Set as default role</string>
    <string name="student">Student</string>
    <string name="read_nfc">Read NFC</string>
    <string name="pools">Pools</string>
    <string name="loading">Loading</string>
    <string name="list_of_students">List of students</string>
    <string name="map">Map</string>
    <string name="delete_class">Delete class</string>
    <string name="voting_open_text">Open text</string>
    <string name="voting_mc">MC</string>
    <string name="voting_rank">Rank</string>
    <string name="select_role">Select role:</string>
    <string name="teacher">Teacher</string>
    <string name="list_of_attending_classes">List of Attending Classes</string>
    <string name="new_student">New Student</string>
    <string name="remove_student">Remove Student</string>
    <string name="new_pool">New Pool</string>
    <string name="results_pools">Results Pools</string>
    <string name="button_post">Post</string>
    <string name="textView_Insert_Question">Insert Question:</string>
    <string name="write_nfc">Write NFC</string>
    <string name="absentees">Absentees</string>
    <string name="list_of_absent_students">List of absent Students</string>
    <string name="voting">Voting</string>
    <string name="choose_type">Choose type:</string>
    <string name="list_of_pools">List of Pools</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="single_choice">Single Choice</string>
    <string name="open_text">Open Text</string>
    <string name="change_type">Change Type</string>
    <string name="new_option">New Option</string>
    <string name="remove_option">Remove Option</string>
    <string name="option">Options</string>
    <string name="answer">Answer</string>
    <string name="delete_pool">Delete Pool</string>
</resources>
