<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ua.classroom.TeacherVotingActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/voting"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="53dp"
        android:layout_toStartOf="@+id/button7"
        android:text="@string/choose_type"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button_open_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_mc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/voting_open_text" />

    <Button
        android:id="@+id/Button_mc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="55dp"
        android:layout_toStartOf="@+id/Button_open_text"
        android:text="@string/voting_mc" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Button_mc"
        android:layout_toEndOf="@+id/Button_open_text"
        android:text="@string/voting_rank" />
</RelativeLayout>
