<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ua.classroom.CreatePoolActivity">

    <TextView
        android:id="@+id/TextView_Insert_Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/textView_Insert_Question"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/EditText_Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/EditText_Question"
        android:layout_below="@+id/TextView_Insert_Question"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/EditText_Question"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:id="@+id/layout_select_type">

        <TextView
            android:id="@+id/choose_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_type"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp" />

        <Button
            android:id="@+id/Button_open_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voting_open_text"
            android:layout_marginBottom="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/Button_multiple_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiple_choice"
            android:layout_above="@+id/Button_open_text"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="50dp" />

        <Button
            android:id="@+id/Button_single_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_choice"
            android:layout_above="@+id/Button_open_text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="27dp"
            android:layout_marginBottom="50dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/EditText_Question"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:id="@+id/layout_open_type"
        android:visibility="gone">

        <TextView
            android:id="@+id/textOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_text"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/EditText_Question"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:id="@+id/layout_choice_type"
        android:visibility="gone">

        <TextView
            android:id="@+id/textMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <fragment
            android:id="@+id/fragmentChoiceList"
            android:name="pt.ua.classroom.ChoicesFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_choices"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_below="@+id/textMC"
            android:layout_above="@+id/remove_choice"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/remove_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="27dp"
            android:text="@string/remove_option"/>

        <Button
            android:id="@+id/add_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="27dp"
            android:text="@string/new_option" />
    </RelativeLayout>

    <Button
        android:id="@+id/Button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="27dp"
        android:text="@string/change_type"
        android:visibility="gone"/>

    <Button
        android:id="@+id/Button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="27dp"
        android:text="@string/button_post"
        android:visibility="gone"/>

</RelativeLayout>
