<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ua.classroom.TeacherActivityMenu">


    <Button
        android:id="@+id/Button_pools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pools"
        android:layout_alignBaseline="@+id/Button_list_students"
        android:layout_alignBottom="@+id/Button_list_students"
        android:layout_alignStart="@+id/Button_map" />

    <Button
        android:id="@+id/Button_list_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_students"
        android:layout_marginBottom="91dp"
        android:layout_marginEnd="13dp"
        android:layout_above="@+id/Button_delete_class"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/Button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:layout_below="@+id/Button_list_students"
        android:layout_toStartOf="@+id/classeName"
        android:layout_marginEnd="31dp" />

    <Button
        android:id="@+id/Button_delete_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_class"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="151dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/classeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="" />


</RelativeLayout>
