<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ua.classroom.StudentListActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/list_of_students"/>

    <fragment
        android:id="@+id/fragmentStudentsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="pt.ua.classroom.StudentListFragment"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        tools:layout="@layout/fragment_student_list"
        android:layout_below="@+id/textView2"
        android:layout_above="@+id/remove_student"/>

    <Button
        android:id="@+id/remove_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_student"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/fragmentStudentsList" />

    <Button
        android:id="@+id/new_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_student"
        android:layout_below="@+id/fragmentStudentsList"
        android:layout_alignStart="@+id/fragmentStudentsList" />

</RelativeLayout>